<resources>
    <string name="app_name" translatable="false">Lets Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="label_profile">Profile</string>
    <string name="friends_list">Friends List</string>
    <string name="request">Request</string>
    <string name="find_friends">Find Friends</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="designation">Designation</string>
    <string name="answer">Answer</string>
    <string name="already_a_user">Already a user?</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="type_the_message">Type the message</string>
    <string name="give_adequate_response_to_change_password">Give Adequate Response to change password</string>
    <string name="question">Question</string>
    <string name="textview">TextView</string>
    <string name="your_response">Your Response</string>
    <string name="submit">submit</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm pass</string>
    <string name="confirm_change_password">change Password</string>
    <string name="profile_view">PROFILE</string>
    <string name="logout_view">Logout</string>
    <string name="username">Username</string>
    <string name="click_here_to_change_password">Click here to change Password</string>
    <string name="textview_request">TextView</string>
    <string name="add">add</string>
    <string name="reject">reject</string>
    <string name="textview_name">TextView</string>
    <string name="Registration_Complete">Registration Complete</string>
    <string name="users">Users</string>
    <string name="Default">Default</string>
    <string name="selectACity">Select a city</string>
    <string name="Mumbai">Mumbai</string>
    <string name="Delhi">Delhi</string>
    <string name="Kolkata">Kolkata</string>
    <string name="Bengaluru">Bengaluru</string>
    <string name="Hyderabad">Hyderabad</string>
    <string name="Chennai">Chennai</string>
    <string name="Ahmedabad">Ahmedabad</string>
    <string name="Pune">Pune</string>
    <string name="Surat">Surat</string>
    <string name="Visakhapatnam">Visakhapatnam</string>
    <string name="Other">Other</string>
    <string name="SelectAQuestion">Select a question</string>
    <string name="FavouriteDish">Favourite Dish?</string>
    <string name="BirthPlace">Birth Place?</string>
    <string name="petName">First Pet\'s Name?</string>
    <string name="please_enter_all_fields">please enter all fields</string>
    <string name="somethingWrong">Something wrong…</string>
    <string name="change_language">Change language</string>
    <string name="Hindi">Hindi</string>
    <string name="French">French</string>
    <string name="PLEASE_ENTER_YOUR_EMAIL">PLEASE ENTER YOUR EMAIL</string>
    <string name="PLEASE_ENTER_YOUR_passWord">PLEASE ENTER YOUR passWord</string>
    <string name="PLEASE_ENTER_YOUR_confirm_passWord">PLEASE ENTER YOUR confirmPassword</string>
    <string name="PLEASE_ENTER_OUR_phoneNumber">PLEASE ENTER YOUR phoneNumber</string>
    <string name="PLEASE_ENTER_YOUR_designation">PLEASE ENTER YOUR designation</string>
    <string name="PLEASE_ENTER_YOUR_Response">PLEASE ENTER YOUR Response</string>
    <string name="Registration_InComplete">Registration InComplete</string>
    <string name="Phone_Number_should_be_of_10_Digits">Phone Number should be of 10 Digits</string>
    <string name="Password_length_should_be_greater_than_8">Password length should be greater than 8</string>
    <string name="Type_the_message">Type the message</string>
    <string name="Font_Colour">Font Colour</string>
    <string name="Font_Size">Font Size</string>
    <string name="Font_Style">Font Style</string>
    <string name="Choose_the_Font_Size">Choose the Font Size</string>
    <string name="Small">Small</string>
    <string name="Medium">Medium</string>
    <string name="Large">Large</string>
    <string name="Extra_Large">Extra Large</string>
    <string name="Crimson">Crimson</string>
    <string name="Coral">Coral</string>
    <string name="DimGrey">DimGrey</string>
    <string name="Snow">Snow</string>
    <string name="Choose_Font_Colour">Choose Font Colour</string>
    <string name="cursive">cursive</string>
    <string name="casual">casual</string>
    <string name="serif_monospace">serif-monospace</string>
    <string name="sans_serif_smallcaps">sans-serif-smallcaps</string>
    <string name="serif">serif</string>
    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
    <string name="Delete_message">Delete message ?</string>
    <string name="Are_you_sure_you_want_to_Delete">Are you sure you want to Delete</string>
    <string name="Message_Deleted">Message Deleted</string>
    <string name="password_Changed">password Changed</string>
    <string name="password_Not_Changed">password Not Changed</string>
    <string name="Saved_Successfully">Saved Successfully</string>
    <string name="Please_make_sure_to_enter_all_the_fields">Please make sure to enter all the fields</string>
    <string name="English">English</string>
    <string name="Language">Language</string>
    <string name="current_language">Current Language</string>
    <string name="Changed_to">Change to</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>