<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/FriendsList"
        android:icon="@drawable/ic_action_friendslist"
        android:title="@string/friends_list"
        android:titleCondensed="List" />
    <item
        android:id="@+id/Request"
        android:icon="@drawable/ic_action_adduser"
        android:title="@string/request" />
    <item
        android:id="@+id/Add_Friends"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find_friends"
        android:titleCondensed="find"/>
    <item
        android:id="@+id/UserProfile"
        android:icon="@drawable/ic_action_profilepage"
        android:title="@string/user_profile"
        android:titleCondensed="Profile"/>
    <item
        android:id="@+id/Settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings" />
</menu>